# mon_ftb_rust

./: .gitignore  Cargo.toml  README.md
assets/Shaders/: fragment.wgsl  shader.wgsl  vertex.wgsl
src/: chunk.rs  chunk_filling.rs  cube_infos.rs  events.rs  game_material.rs  greedy_meshing_inits.rs  items.rs  lighting.rs  main.rs  positions.rs  structures.rs  world.rs
