[package]
name = "mon_ftb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_flycam = "0.8.1"
block-mesh = { path = "./block-mesh-rs" }
building_blocks_mesh = "0.7.1"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"
noise = "0.8.0"
rayon = "1.5.3"
threadpool = "1.8.1"
